# dft_simd

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  dft_c2c_60.c  dft_r2cb_60.c  dft_r2cf_1024.c  dft_r2cf_60.c  dft_simd.cpp  dft_simd_1024.cpp  dft_simd_1024_avx512.cpp
CMakeModules/: FindFFTW.cmake
